.gitignore — added .vs/ and bin/ README.md — documents the new restartCooldownSeconds build.gradle — version bump to 1.2.2 and adds your local Hytale server path to flatDir ConfigData.java — adds restartCooldownSeconds RestartScheduler.java — new cooldown logic with last-restart.txt DiscordWebhook.java — uses URI.create(...).toURL() instead of new URL(...) config.yml — adds restartCooldownSeconds manifest.json — version bump to 1.2.2